--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,7 @@
 @import url(./vendor/fonts/inter/inter.css);
 
 @import url(./blocks/classic-btn/classic-btn.css);
+@import url(./blocks/classic-btn/classic-btn_dark-theme.css);
 
 @import url(./blocks/page/page.css);
 @import url(./blocks/page/__header/page__header.css);
@@ -9,7 +10,9 @@
 @import url(./blocks/page/__footer/page__footer.css);
 
 @import url(./blocks/header/header.css);
+@import url(./blocks/header/__link/header__link.css);
 @import url(./blocks/header/__logo/header__logo.css);
+@import url(./blocks/header/__user-login/header__user-login.css);
 
 @import url(./blocks/content/content.css);
 
@@ -38,6 +41,7 @@
 @import url(./blocks/form/form.css);
 @import url(./blocks/form/__field/form__field.css);
 @import url(./blocks/form/__input/form__input.css);
+@import url(./blocks/form/__input/form__input_dark-theme.css);
 @import url(./blocks/form/__input/_type/form__input_type_error.css);
 @import url(./blocks/form/__input-error/form__input-error.css);
 @import url(./blocks/form/__save-btn/form__save-btn.css);
@@ -56,4 +60,15 @@
 @import url(./blocks/img-pop-up/__container/img-pop-up__container.css);
 @import url(./blocks/img-pop-up/__photo/img-pop-up__photo.css);
 @import url(./blocks/img-pop-up/__title/img-pop-up__title.css);
+
+@import url(./blocks/auth-form/auth-form.css);
+@import url(./blocks/auth-form/__title/auth-form__title.css);
+@import url(./blocks/auth-form/__save-btn/auth-form__save-btn.css);
+@import url(./blocks/auth-form/__save-btn-subtitle/auth-form__save-btn-subtitle.css);
+
+@import url(./blocks/info-tooltip-pop-up/__icon//info-tooltip-pop-up__icon_error.css);
+@import url(./blocks/info-tooltip-pop-up/__icon/info-tooltip-pop-up__icon.css);
+@import url(./blocks/info-tooltip-pop-up/__icon/info-tooltip-pop-up__icon_ok.css);
+@import url(./blocks/info-tooltip-pop-up/__title/info-tooltip-pop-up__title.css);
+
 
